// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given the CartItem component when the component is rendered with controls should render the component with provided props 1`] = `
<CartItemstyled__CartItemRow
  data-name="Product 1"
  key="1"
>
  <CartItemstyled__CartItemCol>
    <img
      alt=""
      src=""
      width="150"
    />
  </CartItemstyled__CartItemCol>
  <CartItemstyled__CartItemCol>
    Product 1
  </CartItemstyled__CartItemCol>
  <CartItemstyled__CartItemCol>
    22
  </CartItemstyled__CartItemCol>
  <CartItemstyled__CartItemCol>
    <div>
      <WithStyle(Button)
        accent={true}
        name="minus"
        onClick={[MockFunction]}
      >
        -
      </WithStyle(Button)>
      <CartItemstyled__QuantityContainer
        dataqa="Product 1"
      >
        1
      </CartItemstyled__QuantityContainer>
      <WithStyle(Button)
        accent={true}
        name="plus"
        onClick={[MockFunction]}
      >
        +
      </WithStyle(Button)>
    </div>
  </CartItemstyled__CartItemCol>
  <CartItemstyled__CartItemCol>
    22
  </CartItemstyled__CartItemCol>
</CartItemstyled__CartItemRow>
`;

exports[`Given the CartItem component when the component is rendered without controls should render the component with provided props 1`] = `
<CartItemstyled__CartItemRow
  data-name="Product 1"
  key="1"
>
  <CartItemstyled__CartItemCol>
    <img
      alt=""
      src=""
      width="150"
    />
  </CartItemstyled__CartItemCol>
  <CartItemstyled__CartItemCol>
    Product 1
  </CartItemstyled__CartItemCol>
  <CartItemstyled__CartItemCol>
    22
  </CartItemstyled__CartItemCol>
  <CartItemstyled__CartItemCol>
    1
  </CartItemstyled__CartItemCol>
  <CartItemstyled__CartItemCol>
    22
  </CartItemstyled__CartItemCol>
</CartItemstyled__CartItemRow>
`;
